front end changes

--- a/PIF_FrontEnd/css/partners-page.css
+++ b/PIF_FrontEnd/css/partners-page.css
@@ -12,7 +12,6 @@
     font-size: 80%;
     color: #508fc7;
     font-weight: bold;
-    padding: 3px 8px;
     border-radius: 3px;
     font-size: 100px;
 }
@@ -30,19 +29,6 @@
     background-size: cover;
 }
 
-<<<<<<< HEAD
-.donate-header {
-    padding-top: 170px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: 50px;
-    color: #f8f8f8;
-}
-
-.donate-header h1 {
-    font-size: 80px;
-}
-
-.donate-header h3 {
-=======
 #donate-header {
     padding-top: 170px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
@@ -56,11 +42,30 @@
 }
 
 #donate-header h3 {
->>>>>>> Margaret
     text-space: 5px;
     font-size: 30px;
     text-transform: uppercase;
     text-decoration: underline;
+}
+
+.custom-counter {
+    margin-left: 0;
+    padding-right: 0;
+    list-style-type: none;
+}
+
+.custom-counter li::before {
+    content: counter(step-counter);
+    margin-right: 5px;
+    font-size: 80%;
+    color: #63a7c7;
+    font-weight: bold;
+    padding: 3px 8px;
+    border-radius: 3px;
+    font-size: 30px;
+}
+.custom-counter li {
+    counter-increment: step-counter;
 }
 
 
@@ -69,9 +74,4 @@
 
 
 
-
-<<<<<<< HEAD
-=======
-
->>>>>>> Margaret
 /*<h2 id = "number_avail">10</h2> <h3 id = "item_avail">bagels available</h3>.*/
