--- a/PIF_FrontEnd/css/landing-page.css
+++ b/PIF_FrontEnd/css/landing-page.css
@@ -188,7 +188,7 @@ h6 {
 
 #progress h1{
     font-size: 70px;
-    color: #6ca5bf;
+    color: rgb(63, 132, 197);
     font-style: bold;
 }
 .banner {
