--- a/PIF_FrontEnd/css/partners-page.css
+++ b/PIF_FrontEnd/css/partners-page.css
@@ -10,7 +10,7 @@
     content: counter(step-counter);
     margin-right: 5px;
     font-size: 80%;
-    color: #508fc7;
+    color: rgb(63, 132, 197);
     font-weight: bold;
     border-radius: 3px;
     font-size: 100px;
@@ -32,13 +32,13 @@
 #donate-header {
     padding-top: 170px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
-    color: #f8f8f8;
+    color: rgb(63, 132, 197);
     margin-left: 140px;
 }
 
 #donate-header h1 {
     font-size: 80px;
-    color: #89b0e7;
+    color: rgb(63, 132, 197);
 }
 
 #donate-header h3 {
@@ -58,7 +58,7 @@
     content: counter(step-counter);
     margin-right: 5px;
     font-size: 80%;
-    color: #63a7c7;
+    color: rgb(63, 132, 197);
     font-weight: bold;
     padding: 3px 8px;
     border-radius: 3px;
@@ -67,9 +67,6 @@
 .custom-counter li {
     counter-increment: step-counter;
 }
-
-
-
 
 
 
