--- a/PIF_FrontEnd/css/stories-page.css
+++ b/PIF_FrontEnd/css/stories-page.css
@@ -77,21 +77,19 @@
 
 /* ###### White / Pink #########*/
 .white-pink {
-    /*margin-left:auto;*/
-    /*margin-right:auto;*/
-    left:40px;
+    margin-left:auto;
+    margin-right:auto;
+    /*left:40px;*/
     max-width: 750px;
     background: #FFF;
     padding: 30px 30px 20px 30px;
-    box-shadow: rgba(187, 187, 187, 1) 0 0px 20px -1px;
-    -webkit-box-shadow: rgba(187, 187, 187, 1) 0 0px 20px -1px;
     font-family: 'Montserrat Light', sans-serif;
     color: #020202;
     border-radius: 10px;
     -webkit-border-radius: 10px;
 }
 .white-pink h1 {
-    font-size: 20px;
+    font-size: 40px;
     /*font: 24px "Trebuchet MS", Arial, Helvetica, sans-serif;*/
     padding: 0px 0px 10px 40px;
     display: block;
@@ -131,8 +129,8 @@
     line-height:15px;
     outline: 1px ;
     font-family: 'Montserrat Light', sans-serif;
-    -webkit-box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.2);
-    box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.2);
+    /*-webkit-box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.2);*/
+    /*box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.2);*/
 }
 .white-pink textarea{
     height:100px;
@@ -140,41 +138,41 @@
     width: 70%;
     resize: none;
 }
-.white-pink .button {
-    margin-top: 20px;
-    right : 0px;
-    -moz-box-shadow:inset 0px 1px 0px 0px #2c75ff;
-    -webkit-box-shadow:inset 0px 1px 0px 0px #2c75ff;
-    box-shadow:inset 0px 1px 0px 0px #2c75ff;
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #2c75ff), color-stop(1, #2c75ff) );
-    background:-moz-linear-gradient( center top, #2c75ff 5%, #2c75ff 100% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bb0', endColorstr='#ef027d');
-    background-color: #ffffff;
-    -moz-border-border-radius:9px;
-    border:1px solid blue;
-    display:inline-block;
-    color:#ffffff;
-    font-family: 'Montserrat Light', sans-serif;
-    font-size:15px;
-    font-weight:bold;
-    font-style:normal;
-    height: 40px;
-    line-height: 30px;
-    width:100px;
-    text-decoration:none;
-    text-align:center;
-    text-shadow:1px 1px 0px #130afb;
-}
-.white-pink .button:hover {
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #130afb), color-stop(1, #2c75ff) );
-    background:-moz-linear-gradient( center top, #130afb 5%, #2c75ff 100% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ef027d', endColorstr='#ff5bb0');
-    background-color: #2c75ff;
-}
-.white-pink .button:active {
-    position:relative;
-    top:1px;
-}
+/*.white-pink .button {*/
+    /*margin-top: 20px;*/
+    /*right : 0px;*/
+    /*-moz-box-shadow:inset 0px 1px 0px 0px #2c75ff;*/
+    /*-webkit-box-shadow:inset 0px 1px 0px 0px #2c75ff;*/
+    /*box-shadow:inset 0px 1px 0px 0px #2c75ff;*/
+    /*background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #2c75ff), color-stop(1, #2c75ff) );*/
+    /*background:-moz-linear-gradient( center top, #2c75ff 5%, #2c75ff 100% );*/
+    /*filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bb0', endColorstr='#ef027d');*/
+    /*background-color: #ffffff;*/
+    /*-moz-border-border-radius:9px;*/
+    /*border:1px solid blue;*/
+    /*display:inline-block;*/
+    /*color:#ffffff;*/
+    /*font-family: 'Montserrat Light', sans-serif;*/
+    /*font-size:15px;*/
+    /*font-weight:bold;*/
+    /*font-style:normal;*/
+    /*height: 40px;*/
+    /*line-height: 30px;*/
+    /*width:100px;*/
+    /*text-decoration:none;*/
+    /*text-align:center;*/
+    /*text-shadow:1px 1px 0px #130afb;*/
+/*}*/
+/*.white-pink .button:hover {*/
+    /*background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #130afb), color-stop(1, #2c75ff) );*/
+    /*background:-moz-linear-gradient( center top, #130afb 5%, #2c75ff 100% );*/
+    /*filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ef027d', endColorstr='#ff5bb0');*/
+    /*background-color: #2c75ff;*/
+/*}*/
+/*.white-pink .button:active {*/
+    /*position:relative;*/
+    /*top:1px;*/
+/*}*/
 .white-pink select {
     background: url('down-arrow.png') no-repeat right, -moz-linear-gradient(top, #FBFBFB 0%, #E9E9E9 100%);
     background: url('down-arrow.png') no-repeat right, -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FBFBFB), color-stop(100%,#E9E9E9));
@@ -188,29 +186,50 @@
     height: 30px;
 }
 
-u { color: blue; }
+u { color: rgb(63,132,197); }
 
 .story{
+    text-align:justify;
+    text-align-last: justify;
     color: black;
     font-family: 'Montserrat Light', sans-serif;
-    border-top:1px solid black;
-    font-size:26px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    padding-bottom: 20px;
+    font-size:22px;
+    margin-top: 20px;
+    /*margin-bottom: 20px;*/
+    /*padding-bottom: 20px;*/
     padding-top: 20px;
+    border-top:1px solid black;
+    display: inline-block;
+
     /*make quotes*/
 
 }
 
 .bqstart {
     float: left;
-    font-size: 700%;
-    color: #0e0bff;
+    font-size: 500%;
+    color: rgb(63,132,197);
 }
 
 .bqend {
     float: right;
-    font-size: 700%;
-    color: #2910ff;
+    font-size: 500%;
+    color: rgb(63,132,197);
 }
+
+.button {
+    font-size: 20px;
+    border-style:solid;
+    border-color: rgb(63, 132, 197);
+    border-width: 5px;
+    padding: 12px;
+    display: block;
+    margin:auto;
+    text-decoration: none;
+    background-color: white;
+
+}
+/*Center everything*/
+/*change button*/
+/*remove shadow*/
+/*Take off line at top*/
